fixed page horizontal scroll

--- a/superset/assets/stylesheets/scss/_explore.scss
+++ b/superset/assets/stylesheets/scss/_explore.scss
@@ -6,7 +6,6 @@
 		}
 	}
 	.datasource{
-		padding:0;
 		.panel-top-header {
 			margin-bottom:18px;
 			border:$borderStyle;
@@ -31,112 +30,100 @@
 					font-size:18px;
 				}
 			}
-			.header-right{
-				.query-and-save-btns-container{
-					margin-bottom:0;
-					.query-and-save{
-						button{
-							width:130px;
-							height:36px;
-							margin-right:8px;
-							border-radius:4px;
-							border:$borderStyle;
-							color:#0089f7;
-							background-color:#fff;
-						}
-						.active{
-							background-color:#1b9cf2;
-							color:#fff;
-						}
-					}
-				}
+			.header-right .query-and-save-btns-container{
+                margin-bottom:0;
+                .query-and-save{
+                    button{
+                        width:130px;
+                        height:36px;
+                        margin-right:8px;
+                        border-radius:4px;
+                        border:$borderStyle;
+                        color:#0089f7;
+                        background-color:#fff;
+                    }
+                    .active{
+                        background-color:#1b9cf2;
+                        color:#fff;
+                    }
+                }
 			}
 		}
-		.col-md-3{
-			.panel-default{
-				.panel-body{
-					.body-left-area{
-						.left-area-item{
-							font-size: 14px;
-							display:flex;
-							justify-content: space-between;
-							.item-left{
-								display:flex;
-								height:26px;
-								align-items:center;
-								.radio-item{
-									margin-left:20px;
-									display:flex;
-									align-items:center;
-									input{
-										margin:0;
-										margin-right:5px;
-									}
-								}
-							}
-							.item-right{
-								button{
-									width:26px;
-									height:26px;
-									background-color:#279cf2;
-									text-align:center;
-									line-height:26px;
-									color:#fff;
-									font-size:24px;
-									border-radius:4px;
-								}
-							}
-						}
-						.check-area{
-							margin-top:12px;
-							.select2{
-								width:100%;
-								.select2-arrow{
-									.icon{
-										background-position:-296px -664px;
-									}
-								}
-							}
-						}
-					}
-				}
-			}
+		.col-md-3 .panel-default .panel-body .body-left-area{
+            .left-area-item{
+                font-size: 14px;
+                display:flex;
+                justify-content: space-between;
+                .item-left{
+                    display:flex;
+                    height:26px;
+                    align-items:center;
+                    .radio-item{
+                        margin-left:20px;
+                        display:flex;
+                        align-items:center;
+                        input{
+                            margin:0;
+                            margin-right:5px;
+                        }
+                    }
+                }
+                .item-right{
+                    button{
+                        width:26px;
+                        height:26px;
+                        background-color:#279cf2;
+                        text-align:center;
+                        line-height:26px;
+                        color:#fff;
+                        font-size:24px;
+                        border-radius:4px;
+                    }
+                }
+            }
+            .check-area{
+                margin-top:12px;
+                .select2{
+                    width:100%;
+                    .select2-arrow{
+                        .icon{
+                            background-position:-296px -664px;
+                        }
+                    }
+                }
+            }
 		}
-		.col-md-9{
-			.panel-default{
-				.panel-heading{
-					.pull-left{
-						display:flex;
-						align-items:center;
-						.cached-time{
-							padding-left:12px;
-							.label-warning{
-								background-color:#2acc28;
-							}
-						}
-						
-						h3{
-							color:#1d2531;
-							font-size:18px;
-							display:flex;
-							margin:0;
-							.icon{
-								width: 16px;
-								height:16px;
-								cursor:pointer;
-							}
-							.icon:nth-of-type(1){
-								background-position:-52px -210px;
-								margin:0 12px;
+		.col-md-9 .panel-default .panel-heading{
+            .pull-left{
+                display:flex;
+                align-items:center;
+                .cached-time{
+                    padding-left:12px;
+                    .label-warning{
+                        background-color:#2acc28;
+                    }
+                }
 
-							}
-							.icon:nth-of-type(2){
-								background-position:-290px -251px;
-							}
-						}
-					}
-				}
-			}
+                h3{
+                    color:#1d2531;
+                    font-size:18px;
+                    display:flex;
+                    margin:0;
+                    .icon{
+                        width: 16px;
+                        height:16px;
+                        cursor:pointer;
+                    }
+                    .icon:nth-of-type(1){
+                        background-position:-52px -210px;
+                        margin:0 12px;
+
+                    }
+                    .icon:nth-of-type(2){
+                        background-position:-290px -251px;
+                    }
+                }
+            }
 		}
 	}
 }
